--- a/public/index.html
+++ b/public/index.html
@@ -232,6 +232,8 @@
                 if (cid === "tout") imgSrc = "/assets/img/cards/tout.png";
                 if (cid === "vole_carte")
                   imgSrc = "/assets/img/cards/vole_carte.png";
+                if (cid === "medusa")
+                  imgSrc = "/assets/img/cards/medusa.png";
 
                 if (imgSrc) {
                   const img = document.createElement("img");
