--- a/public/waiting.html
+++ b/public/waiting.html
@@ -613,7 +613,7 @@
                     if (cid === "invisible")
                       imgSrc = "/assets/img/cards/invisible.png";
                     if (cid === "kamikaze")
-                      imgSrc = "/assets/img/cards/kamikaz.png";
+                      imgSrc = "/assets/img/cards/kamikaze.png";
                     if (cid === "melange")
                       imgSrc = "/assets/img/cards/mélange.png";
                     if (cid === "mine") imgSrc = "/assets/img/cards/mine.png";
@@ -647,6 +647,8 @@
                     if (cid === "tout") imgSrc = "/assets/img/cards/tout.png";
                     if (cid === "vole_carte")
                       imgSrc = "/assets/img/cards/vole_carte.png";
+                    if (cid === "medusa")
+                      imgSrc = "/assets/img/cards/medusa.png";
 
                     if (imgSrc) {
                       const img = document.createElement("img");
